--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "got": "^11.5.1",
     "pm2": "^4.4.0",
     "util": "^0.12.3"
+  },
+  "devDependencies": {
+    "@types/node": "^14.6.0",
+    "typescript": "^3.9.7"
   }
 }
