--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Boilerplate-code/template for discord bots",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node index.ts"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.6.0",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   }
 }
