--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@ node_modules/
 env/**/*
 *.secret.ts
 *.secrets.ts
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
