--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ node_modules/
 env/**/*
 *.secret.ts
 *.secrets.ts
+
+## Yarn Berry
 .yarn/*
 !.yarn/patches
 !.yarn/releases
@@ -9,3 +11,6 @@ env/**/*
 !.yarn/sdks
 !.yarn/versions
 .pnp.*
+
+# VSCode
+.vscode/*
