--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
   },
   "homepage": "https://github.com/terzhang/discord-bot#readme",
   "dependencies": {
-    "discord.js": "^12.5.1",
+    "discord.js": "^13",
     "fs": "0.0.1-security",
-    "got": "^11.8.2",
-    "pm2": "^4.5.5",
+    "got": "^12",
+    "pm2": "^5",
     "util": "^0.12.3"
   },
   "devDependencies": {
-    "@types/node": "^14.14.31",
-    "ts-node": "^9.1.1",
-    "typescript": "^3.9.9"
+    "@types/node": "^17",
+    "ts-node": "^10",
+    "typescript": "^4",
+    "tslib": "^2.3.1"
   }
 }
