--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "ES2021",
     "module": "commonjs",
     "sourceMap": true,
-    // "lib": ["es6", "es2015", "esnext"],
+    "lib": ["esnext"],
     "outDir": "./dist",
     "moduleResolution": "node",
     "declaration": false,
